--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="info.androidhive.sqlite.view.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <android.support.v7.widget.RecyclerView
+    <!--<android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -22,6 +21,19 @@
         android:fontFamily="sans-serif-light"
         android:text="@string/msg_no_notes"
         android:textColor="@color/msg_no_notes"
-        android:textSize="@dimen/msg_no_notes" />
+        android:textSize="@dimen/msg_no_notes" />-->
+
+    <FrameLayout
+        android:layout_above="@+id/bottomNavigationView"
+        android:id="@+id/containerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.BottomNavigationView
+        app:menu="@menu/bottom"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
