--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="timestamp">#858585</color>
     <color name="note_list_text">#232323</color>
     <color name="black">#000000</color>
+    <color name="wine_list_text">#121212</color>
 </resources>
