--- a/app/src/main/res/layout/wine_list_row.xml
+++ b/app/src/main/res/layout/wine_list_row.xml
@@ -9,44 +9,92 @@
     android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/dimen_10">
 
-    <TextView
-        android:id="@+id/BorGyarto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/BorNeve"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/BorFajta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/BorSzin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/BorEvjarat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/BorAlkoholTartam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/BorFogyasztasiHomerseklet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/BorAtlagPontszam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/dot_margin_right"
+        android:includeFontPadding="false"
+        android:textColor="@color/black"
+        android:textSize="@dimen/szakmaisagErteke"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/BorGyarto"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/BorAtlagPontszam"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text" />
+
+    <TextView
+        android:id="@+id/BorNeve"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/BorGyarto"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text"  />
+
+    <TextView
+        android:id="@+id/BorFajta"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BorGyarto"
+        android:layout_marginRight="@dimen/dot_margin_right"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text"  />
+
+    <TextView
+        android:id="@+id/BorSzin"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BorGyarto"
+        android:layout_toRightOf="@id/BorFajta"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text" />
+
+    <TextView
+        android:id="@+id/BorEvjarat"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BorGyarto"
+        android:layout_toRightOf="@id/BorSzin"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text" />
+
+    <TextView
+        android:id="@+id/BorAlkoholTartam"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BorGyarto"
+        android:layout_toRightOf="@id/BorEvjarat"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text"  />
+
+    <TextView
+        android:id="@+id/BorFogyasztasiHomerseklet"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/BorGyarto"
+        android:layout_toRightOf="@id/BorAlkoholTartam"
+        android:includeFontPadding="false"
+        android:textColor="@color/wine_list_text"
+        android:lineSpacingExtra="0dp"
+        android:textSize="@dimen/note_list_text" />
 
 </RelativeLayout>
