--- a/app/src/main/res/layout/fragment_borbiralat.xml
+++ b/app/src/main/res/layout/fragment_borbiralat.xml
@@ -23,7 +23,7 @@
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/tvNoBor"
+        android:id="@+id/tvNoBiralat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
