--- a/app/src/main/res/layout/fragment_borbiralat.xml
+++ b/app/src/main/res/layout/fragment_borbiralat.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewBorok"
+        android:id="@+id/recyclerViewBorbiralat"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/ures_biralati_lista"
+        android:text="@string/empty_rating_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
