--- a/app/src/main/res/layout/judgement_list_row.xml
+++ b/app/src/main/res/layout/judgement_list_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -9,51 +10,199 @@
     android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/dimen_10">
 
-    <TextView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="Bíráló személy:"
-        android:layout_below="@+id/BorBiraltBorID"
-        android:layout_toRightOf="@id/BorBiralatBiraloID"/>
 
-    <TextView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="Bírált bor:"
-        android:layout_below="@+id/BorBiralatBiraloID"/>
-    <TextView
-        android:id="@+id/BorBiralatBiraloID"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/dot_margin_right"
-        android:includeFontPadding="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/szakmaisagErteke"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/BorBiraltBorID"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/BorBiralatBiraloID"
-        android:includeFontPadding="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/szakmaisagErteke"
-        android:textStyle="bold" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:stretchColumns="1"
+        >
 
-    <TextView
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:text="Bírált minta száma:"
-        android:layout_below="@+id/megjelenesTisztasaga"
-        android:layout_toRightOf="@id/BorBiraltBorID"/>
-    <TextView
-        android:id="@+id/megjelenesTisztasaga"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/BorBiraltBorID"
-        android:includeFontPadding="false"
-        android:textColor="@color/black"
-        android:textSize="@dimen/szakmaisagErteke"
-        android:textStyle="bold" />
+        <TableRow>
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:text="Valued wine:" />
+            <TextView
+                android:id="@+id/BorBiraltBorID"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textColor="@color/black"
+                android:textSize="@dimen/szakmaisagErteke"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Valuable person:"/>
+            <TextView
+                android:id="@+id/BorBiralatBiraloID"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:textColor="@color/black"
+                android:textSize="@dimen/szakmaisagErteke"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="100dp"/>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="100dp"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Excellent"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Very good"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Good"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Appropriate"/>
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="Insufficient"/>
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Comment"/>
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Appearance" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Purity" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="5" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="4" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="3" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="2" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="1" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+
+            <!--<TextView-->
+                <!--android:id="@+id/megjelenesTisztasaga"-->
+                <!--android:layout_width="60dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:includeFontPadding="false"-->
+                <!--android:textColor="@color/black"-->
+                <!--android:textSize="@dimen/szakmaisagErteke"-->
+                <!--android:textStyle="bold" />-->
+
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Color" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="10" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="8" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="6" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="4" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="2" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aroma" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Intensity" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="8" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="7" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="6" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="4" />
+            <TextView
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:text="2" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+        </TableRow>
+
+
+    </TableLayout>
 
 </RelativeLayout>
