--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#455399</color>
     <color name="colorPrimaryDark">#455399</color>
+    <color name="colorPrimaryTable">#8ba4ba</color>
     <color name="colorAccent">#00c6ae</color>
     <color name="msg_no_notes">#999</color>
     <color name="hint_enter_note">#89c3c3c3</color>
