--- a/app/src/main/res/layout/note_list_row.xml
+++ b/app/src/main/res/layout/note_list_row.xml
@@ -23,8 +23,9 @@
 
     <TextView
         android:id="@+id/szakmaisagErteke"
-        android:layout_width="30dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         android:layout_toRightOf="@id/dot"
         android:textColor="@color/black"
         android:textSize="@dimen/szakmaisagErteke"
@@ -48,7 +49,7 @@
 
     <TextView
         android:id="@+id/szemIgSzam"
-        android:layout_width="90dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/szulDatum"
         android:textColor="@color/note_list_text"
